# stubert

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-entrypoint.sh
design-docs/: architecture.md  build-plan.md  claude-cli.md  commands.md  docker.md  gateway.md  heartbeats.md  memory.md  messaging.md  schedule.md  sessions.md
example-config/: HEARTBEAT.md  config.yaml  schedules.yaml
example-config/search/: CLAUDE.md
src/: lib.rs  logging.rs  main.rs
src/adapters/: bluebubbles.rs  discord.rs  markdown.rs  message_split.rs  mod.rs  sanitize.rs  telegram.rs
src/config/: mod.rs  types.rs
src/gateway/: claude_cli.rs  commands.rs  core.rs  health.rs  heartbeat.rs  history.rs  mod.rs  scheduler.rs  session.rs  skills.rs
tests/: gateway_integration.rs  live_cli.rs
tests/common/: mod.rs
