[package]
name = "stubert"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rolling-file = "0.2"
thiserror = "2"
async-trait = "0.1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serenity = { version = "0.12", default-features = false, features = ["rustls_backend", "client", "gateway", "model", "http", "builder"] }
libc = "0.2"
cron = "0.15"
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1"] }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
mockall = "0.13"
tokio = { version = "1", features = ["full", "test-util"] }
filetime = "0.2.27"
tower = { version = "0.5", features = ["util"] }
